Customizando cor da janela.

--- a/AV3DNavigator.ini
+++ b/AV3DNavigator.ini
@@ -1,7 +1,11 @@
 # Av3DNavigator: "sourceforge.net/projects/av3dnavigator".
 
-# Arquivo de inicialização de variáveis globais. Opções de alteração: "x", "y", "z", "Teta", "Phi", "Rot", "RaioTeta", "RotacaoTeta", "RaioPhi", "RotacaoPhi", "DistanciaTela", "AnguloVisao", "MargemAnguloVisao", "Apfloat", "fillPolygon", "ResolucaoTriangulos", "SleepTime".
+# Arquivo de inicialização de variáveis globais. Opções de alteração: "x", "y", "z", "Teta", "Phi", "Rot", "RaioTeta", "RotacaoTeta", "RaioPhi", "RotacaoPhi", "DistanciaTela", "AnguloVisao", "MargemAnguloVisao", "Apfloat", "fillPolygon", "ResolucaoTriangulos", "SleepTime" e "CorJanela".
 
 x = 0
 y = 0
 z = 0
+Teta = 0
+Phi = 0
+
+CorJanela = 0,0,255
