--- a/AV3DNavigator.ini
+++ b/AV3DNavigator.ini
@@ -1,4 +1,4 @@
-# Av3DNavigator: "sourceforge.net/projects/av3dnavigator".
+# AV3DNavigator: "sourceforge.net/projects/av3dnavigator".
 
 # Arquivo de inicialização de variáveis globais. Opções de alteração: "x", "y", "z", "Teta", "Phi", "Rot", "RaioTeta", "RotacaoTeta", "RaioPhi", "RotacaoPhi", "DistanciaTela", "AnguloVisao", "MargemAnguloVisao", "Apfloat", "fillPolygon", "ResolucaoTriangulos", "SleepTime" e "CorJanela".
 
