--- a/AV3DNavigator.ini
+++ b/AV3DNavigator.ini
@@ -1,6 +1,6 @@
 # AV3DNavigator: "sourceforge.net/projects/av3dnavigator".
 
-# Arquivo de inicialização de variáveis globais. Opções de alteração: "x", "y", "z", "Teta", "Phi", "Rot", "RaioTeta", "RotacaoTeta", "RaioPhi", "RotacaoPhi", "DistanciaTela", "FatorAnguloVisao", "MargemAnguloVisao", "Apfloat", "fillPolygon", "ResolucaoTriangulos", "SleepTime", "CorJanela" e  "CorFonteJanela".
+# Arquivo de inicialização de variáveis globais. Opções de alteração: "x", "y", "z", "Teta", "Phi", "Rot", "RaioTeta", "RotacaoTeta", "RaioPhi", "RotacaoPhi", "DistanciaTela", "FatorAnguloVisao", "MargemAnguloVisao", "Apfloat", "fillPolygon", "ResolucaoTriangulos", "SleepTime", "CorJanela",  "CorFonteJanela" e "CorJanelaGradiente".
 
 x = 0
 y = 0
@@ -9,4 +9,5 @@ Teta = 0
 Phi = 0
 
 CorJanela = 0,0,255
+CorJanelaGradiente = 0,0,0
 CorFonteJanela = 255,255,255
