--- a/AV3DNavigator.ini
+++ b/AV3DNavigator.ini
@@ -1,6 +1,6 @@
 # AV3DNavigator: "sourceforge.net/projects/av3dnavigator".
 
-# Arquivo de inicialização de variáveis globais. Opções de alteração: "x", "y", "z", "Teta", "Phi", "Rot", "RaioTeta", "RotacaoTeta", "RaioPhi", "RotacaoPhi", "DistanciaTela", "FatorAnguloVisao", "MargemAnguloVisao", "Apfloat", "fillPolygon", "ResolucaoTriangulos", "FlagProdutoEscalarPositivo", "SleepTime", "CorJanela",  "CorFonteJanela" e "CorJanelaGradiente".
+# Arquivo de inicialização de variáveis globais. Opções de alteração: "x", "y", "z", "Teta", "Phi", "Rot", "RaioTeta", "RotacaoTeta", "RaioPhi", "RotacaoPhi", "DistanciaTela", "FatorAnguloVisao", "MargemAnguloVisao", "Apfloat", "fillPolygon", "ResolucaoTriangulos", "SleepTime", "CorJanela",  "CorFonteJanela" e "CorJanelaGradiente".
 
 x = 0
 y = 0
