--- a/AV3DNavigator.ini
+++ b/AV3DNavigator.ini
@@ -1,6 +1,8 @@
 # AV3DNavigator: "sourceforge.net/projects/av3dnavigator".
 
-# Arquivo de inicialização de variáveis globais. Opções de alteração: "x", "y", "z", "Teta", "Phi", "Rot", "RaioTeta", "RotacaoTeta", "RaioPhi", "RotacaoPhi", "DistanciaTela", "FatorAnguloVisao", "MargemAnguloVisao", "Apfloat", "fillPolygon", "ResolucaoTriangulos", "SleepTime", "CorJanela",  "CorFonteJanela" e "CorJanelaGradiente".
+# Arquivo de inicialização de variáveis globais. Opções de alteração: "x", "y", "z", "Teta", "Phi", "Rot", "RaioTeta", "RotacaoTeta", "RaioPhi", "RotacaoPhi", "DistanciaTela", "FatorAnguloVisao", "MargemAnguloVisao", "Apfloat", "fillPolygon", "ResolucaoTriangulos", "SleepTime", "CorJanela",  "CorFonteJanela", "CorJanelaGradiente" e "CorPrint".
+
+# A opção "CorPrint" é referente à cor das legendas quando capturada uma snapshot, se não definida, será aleatória.
 
 x = 0
 y = 0
