Implementação: parâmetro variável.

--- a/AV3DNavigator.ini
+++ b/AV3DNavigator.ini
@@ -1,6 +1,6 @@
 # AV3DNavigator: "sourceforge.net/projects/av3dnavigator".
 
-# Arquivo de inicialização de variáveis globais. Opções de alteração: "x", "y", "z", "Teta", "Phi", "Rot", "RaioTeta", "RotacaoTeta", "RaioPhi", "RotacaoPhi", "DistanciaTela", "FatorAnguloVisao", "MargemAnguloVisao", "Apfloat", "fillPolygon", "ResolucaoTriangulos", "SleepTime", "CorJanela",  "CorFonteJanela", "CorJanelaGradiente", "CorPrint", "LabelAnimado", e "PrecisaoApfloat".
+# Arquivo de inicialização de variáveis globais. Opções de alteração: "x", "y", "z", "Teta", "Phi", "Rot", "RaioTeta", "RotacaoTeta", "RaioPhi", "RotacaoPhi", "DistanciaTela", "FatorAnguloVisao", "MargemAnguloVisao", "Apfloat", "fillPolygon", "ResolucaoTriangulos", "SleepTime", "CorJanela",  "CorFonteJanela", "CorJanelaGradiente", "CorPrint", "Parametro", "ParametroStep", "LabelAnimado", e "PrecisaoApfloat".
 
 # A opção "CorPrint" é referente à cor das legendas quando capturada uma snapshot, se não definida, será aleatória.
 
@@ -13,6 +13,9 @@ Phi = 0
 CorJanela = 0,0,255
 CorJanelaGradiente = 0,0,0
 CorFonteJanela = 255,255,255
+
+Parametro = 0
+ParametroStep = 1
 
 LabelAnimado = 1
 PrecisaoApfloat = 20
