--- a/AV3DNavigator.ini
+++ b/AV3DNavigator.ini
@@ -1,6 +1,6 @@
 # AV3DNavigator: "sourceforge.net/projects/av3dnavigator".
 
-# Arquivo de inicialização de variáveis globais. Opções de alteração: "x", "y", "z", "Teta", "Phi", "Rot", "RaioTeta", "RotacaoTeta", "RaioPhi", "RotacaoPhi", "DistanciaTela", "FatorAnguloVisao", "MargemAnguloVisao", "Apfloat", "fillPolygon", "ResolucaoTriangulos", "SleepTime", "CorJanela",  "CorFonteJanela", "CorJanelaGradiente", "CorPrint", "Parametro", "ParametroStep", "LabelAnimado", e "PrecisaoApfloat".
+# Arquivo de inicialização de variáveis globais. Opções de alteração: "x", "y", "z", "Teta", "Phi", "Rot", "RaioTeta", "RotacaoTeta", "RaioPhi", "RotacaoPhi", "DistanciaTela", "FatorAnguloVisao", "MargemAnguloVisao", "Apfloat", "fillPolygon", "ResolucaoTriangulos", "SleepTime", "CorJanela",  "CorFonteJanela", "CorJanelaGradiente", "CorPrint", "Parametro$", "Parametro$Step", com $ variando de 0 a 9, "LabelAnimado", e "PrecisaoApfloat".
 
 # A opção "CorPrint" é referente à cor das legendas quando capturada uma snapshot, se não definida, será aleatória.
 
@@ -14,8 +14,8 @@ CorJanela = 0,0,255
 CorJanelaGradiente = 0,0,0
 CorFonteJanela = 255,255,255
 
-Parametro = 0
-ParametroStep = 1
+Parametro0 = 0
+Parametro0Step = 1
 
 LabelAnimado = 1
 PrecisaoApfloat = 20
