--- a/AV3DNavigator.ini
+++ b/AV3DNavigator.ini
@@ -24,7 +24,7 @@ PrecisaoApfloat = 20
 
 # Trick.
 
-# Quanto mais veloz sua máquina, recomenda-se um maior valor. Algumas JDKs não leem os clocks dos processadores. Variável associada à precisão em rotações. Default: 20.
+# Quanto mais veloz sua máquina, recomenda-se um maior valor. Algumas JDKs não leem os clocks dos processadores. Variável associada à precisão em algumas rotações quando o cosseno de φ troca de sinal. Default: 20.
 
 DivisorCosPhiAdd = 20
 
