Downgrade de algumas funcionalidades.
Para manter o perfeccionismo com relação a todas as demais.

--- a/AV3DNavigator.ini
+++ b/AV3DNavigator.ini
@@ -1,6 +1,6 @@
 # AV3DNavigator: "sourceforge.net/projects/av3dnavigator".
 
-# Arquivo de inicialização de variáveis globais. Opções de alteração: "x", "y", "z", "Teta", "Phi", "Rot", "RaioTeta", "RotacaoTeta", "RaioPhi", "RotacaoPhi", "DistanciaTela", "FatorAnguloVisao", "MargemAnguloVisao", "Apfloat", "fillPolygon", "ResolucaoTriangulos", "SleepTime", "CorJanela",  "CorFonteJanela", "CorJanelaGradiente", "CorPrint", "Parametro$", "Parametro$Step", com $ variando de 0 a 9, "LabelAnimado", "PrecisaoApfloat" e "DivisorCosPhiAdd".
+# Arquivo de inicialização de variáveis globais. Opções de alteração: "x", "y", "z", "Teta", "Phi", "Rot", "RaioTeta", "RotacaoTeta", "RaioPhi", "RotacaoPhi", "DistanciaTela", "FatorAnguloVisao", "MargemAnguloVisao", "Apfloat", "fillPolygon", "ResolucaoTriangulos", "SleepTime", "CorJanela",  "CorFonteJanela", "CorJanelaGradiente", "CorPrint", "Parametro$", "Parametro$Step", com $ variando de 0 a 9, "LabelAnimado" e "PrecisaoApfloat".
 
 # A opção "CorPrint" é referente à cor das legendas quando capturada uma snapshot, se não definida, será aleatória.
 
@@ -19,13 +19,3 @@ Parametro0Step = 1
 
 LabelAnimado = 1
 PrecisaoApfloat = 20
-
-# _______________
-
-# Trick.
-
-# Quanto mais veloz sua máquina, recomenda-se um maior valor. Algumas JDKs não leem os clocks dos processadores. Variável associada à precisão em algumas rotações quando o cosseno de φ troca de sinal. Default: 20.
-
-DivisorCosPhiAdd = 20
-
-# _______________
